test_outputs/connlist/onlineboutique_explain_output.txt

##########################################
# Specific connections and their reasons #
##########################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => default/adservice-77d5cd745d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy default/adservice-netpol selects default/adservice-77d5cd745d[ReplicaSet], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => default/cartservice-74f56fd4b[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy default/cartservice-netpol selects default/cartservice-74f56fd4b[ReplicaSet], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => default/checkoutservice-69c8ff664b[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy default/checkoutservice-netpol selects default/checkoutservice-69c8ff664b[ReplicaSet], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => default/currencyservice-77654bbbdd[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy default/currencyservice-netpol selects default/currencyservice-77654bbbdd[ReplicaSet], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => default/emailservice-54c7c5d9d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy default/emailservice-netpol selects default/emailservice-54c7c5d9d[ReplicaSet], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => default/frontend-99684f7f8[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy default/frontend-netpol selects default/frontend-99684f7f8[ReplicaSet], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => default/loadgenerator-555fbdc87d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy default/loadgenerator-netpol selects default/loadgenerator-555fbdc87d[ReplicaSet], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule (no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => default/paymentservice-bbcbdc6b6[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy default/paymentservice-netpol selects default/paymentservice-bbcbdc6b6[ReplicaSet], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => default/productcatalogservice-68765d49b6[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy default/productcatalogservice-netpol selects default/productcatalogservice-68765d49b6[ReplicaSet], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => default/recommendationservice-5f8c456796[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy default/recommendationservice-netpol selects default/recommendationservice-5f8c456796[ReplicaSet], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => default/shippingservice-5bd985c46d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy default/shippingservice-netpol selects default/shippingservice-5bd985c46d[ReplicaSet], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/adservice-77d5cd745d[ReplicaSet] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/adservice-netpol selects default/adservice-77d5cd745d[ReplicaSet], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule (no rules defined)
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/adservice-77d5cd745d[ReplicaSet] => default/cartservice-74f56fd4b[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/adservice-netpol selects default/adservice-77d5cd745d[ReplicaSet], but default/cartservice-74f56fd4b[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/cartservice-netpol selects default/cartservice-74f56fd4b[ReplicaSet], but default/adservice-77d5cd745d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/adservice-77d5cd745d[ReplicaSet] => default/checkoutservice-69c8ff664b[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/adservice-netpol selects default/adservice-77d5cd745d[ReplicaSet], but default/checkoutservice-69c8ff664b[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/checkoutservice-netpol selects default/checkoutservice-69c8ff664b[ReplicaSet], but default/adservice-77d5cd745d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/adservice-77d5cd745d[ReplicaSet] => default/currencyservice-77654bbbdd[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/adservice-netpol selects default/adservice-77d5cd745d[ReplicaSet], but default/currencyservice-77654bbbdd[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/currencyservice-netpol selects default/currencyservice-77654bbbdd[ReplicaSet], but default/adservice-77d5cd745d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/adservice-77d5cd745d[ReplicaSet] => default/emailservice-54c7c5d9d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/adservice-netpol selects default/adservice-77d5cd745d[ReplicaSet], but default/emailservice-54c7c5d9d[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/emailservice-netpol selects default/emailservice-54c7c5d9d[ReplicaSet], but default/adservice-77d5cd745d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/adservice-77d5cd745d[ReplicaSet] => default/frontend-99684f7f8[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/adservice-netpol selects default/adservice-77d5cd745d[ReplicaSet], but default/frontend-99684f7f8[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/frontend-netpol selects default/frontend-99684f7f8[ReplicaSet], but default/adservice-77d5cd745d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/adservice-77d5cd745d[ReplicaSet] => default/loadgenerator-555fbdc87d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/adservice-netpol selects default/adservice-77d5cd745d[ReplicaSet], but default/loadgenerator-555fbdc87d[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/loadgenerator-netpol selects default/loadgenerator-555fbdc87d[ReplicaSet], but default/adservice-77d5cd745d[ReplicaSet] is not selected by any Ingress rule (no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/adservice-77d5cd745d[ReplicaSet] => default/paymentservice-bbcbdc6b6[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/adservice-netpol selects default/adservice-77d5cd745d[ReplicaSet], but default/paymentservice-bbcbdc6b6[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/paymentservice-netpol selects default/paymentservice-bbcbdc6b6[ReplicaSet], but default/adservice-77d5cd745d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/adservice-77d5cd745d[ReplicaSet] => default/productcatalogservice-68765d49b6[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/adservice-netpol selects default/adservice-77d5cd745d[ReplicaSet], but default/productcatalogservice-68765d49b6[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/productcatalogservice-netpol selects default/productcatalogservice-68765d49b6[ReplicaSet], but default/adservice-77d5cd745d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/adservice-77d5cd745d[ReplicaSet] => default/recommendationservice-5f8c456796[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/adservice-netpol selects default/adservice-77d5cd745d[ReplicaSet], but default/recommendationservice-5f8c456796[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/recommendationservice-netpol selects default/recommendationservice-5f8c456796[ReplicaSet], but default/adservice-77d5cd745d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/adservice-77d5cd745d[ReplicaSet] => default/redis-cart-78746d49dc[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/adservice-netpol selects default/adservice-77d5cd745d[ReplicaSet], but default/redis-cart-78746d49dc[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/adservice-77d5cd745d[ReplicaSet] => default/shippingservice-5bd985c46d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/adservice-netpol selects default/adservice-77d5cd745d[ReplicaSet], but default/shippingservice-5bd985c46d[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/shippingservice-netpol selects default/shippingservice-5bd985c46d[ReplicaSet], but default/adservice-77d5cd745d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/cartservice-74f56fd4b[ReplicaSet] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/cartservice-netpol selects default/cartservice-74f56fd4b[ReplicaSet], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule (no rules defined)
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/cartservice-74f56fd4b[ReplicaSet] => default/adservice-77d5cd745d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/cartservice-netpol selects default/cartservice-74f56fd4b[ReplicaSet], but default/adservice-77d5cd745d[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/adservice-netpol selects default/adservice-77d5cd745d[ReplicaSet], but default/cartservice-74f56fd4b[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/cartservice-74f56fd4b[ReplicaSet] => default/checkoutservice-69c8ff664b[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/cartservice-netpol selects default/cartservice-74f56fd4b[ReplicaSet], but default/checkoutservice-69c8ff664b[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/checkoutservice-netpol selects default/checkoutservice-69c8ff664b[ReplicaSet], but default/cartservice-74f56fd4b[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/cartservice-74f56fd4b[ReplicaSet] => default/currencyservice-77654bbbdd[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/cartservice-netpol selects default/cartservice-74f56fd4b[ReplicaSet], but default/currencyservice-77654bbbdd[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/currencyservice-netpol selects default/currencyservice-77654bbbdd[ReplicaSet], but default/cartservice-74f56fd4b[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/cartservice-74f56fd4b[ReplicaSet] => default/emailservice-54c7c5d9d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/cartservice-netpol selects default/cartservice-74f56fd4b[ReplicaSet], but default/emailservice-54c7c5d9d[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/emailservice-netpol selects default/emailservice-54c7c5d9d[ReplicaSet], but default/cartservice-74f56fd4b[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/cartservice-74f56fd4b[ReplicaSet] => default/frontend-99684f7f8[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/cartservice-netpol selects default/cartservice-74f56fd4b[ReplicaSet], but default/frontend-99684f7f8[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/frontend-netpol selects default/frontend-99684f7f8[ReplicaSet], but default/cartservice-74f56fd4b[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/cartservice-74f56fd4b[ReplicaSet] => default/loadgenerator-555fbdc87d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/cartservice-netpol selects default/cartservice-74f56fd4b[ReplicaSet], but default/loadgenerator-555fbdc87d[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/loadgenerator-netpol selects default/loadgenerator-555fbdc87d[ReplicaSet], but default/cartservice-74f56fd4b[ReplicaSet] is not selected by any Ingress rule (no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/cartservice-74f56fd4b[ReplicaSet] => default/paymentservice-bbcbdc6b6[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/cartservice-netpol selects default/cartservice-74f56fd4b[ReplicaSet], but default/paymentservice-bbcbdc6b6[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/paymentservice-netpol selects default/paymentservice-bbcbdc6b6[ReplicaSet], but default/cartservice-74f56fd4b[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/cartservice-74f56fd4b[ReplicaSet] => default/productcatalogservice-68765d49b6[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/cartservice-netpol selects default/cartservice-74f56fd4b[ReplicaSet], but default/productcatalogservice-68765d49b6[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/productcatalogservice-netpol selects default/productcatalogservice-68765d49b6[ReplicaSet], but default/cartservice-74f56fd4b[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/cartservice-74f56fd4b[ReplicaSet] => default/recommendationservice-5f8c456796[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/cartservice-netpol selects default/cartservice-74f56fd4b[ReplicaSet], but default/recommendationservice-5f8c456796[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/recommendationservice-netpol selects default/recommendationservice-5f8c456796[ReplicaSet], but default/cartservice-74f56fd4b[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/cartservice-74f56fd4b[ReplicaSet] => default/redis-cart-78746d49dc[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/cartservice-netpol selects default/cartservice-74f56fd4b[ReplicaSet], but default/redis-cart-78746d49dc[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/cartservice-74f56fd4b[ReplicaSet] => default/shippingservice-5bd985c46d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/cartservice-netpol selects default/cartservice-74f56fd4b[ReplicaSet], but default/shippingservice-5bd985c46d[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/shippingservice-netpol selects default/shippingservice-5bd985c46d[ReplicaSet], but default/cartservice-74f56fd4b[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/checkoutservice-69c8ff664b[ReplicaSet] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/checkoutservice-netpol selects default/checkoutservice-69c8ff664b[ReplicaSet], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/checkoutservice-69c8ff664b[ReplicaSet] => default/adservice-77d5cd745d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/checkoutservice-netpol selects default/checkoutservice-69c8ff664b[ReplicaSet], but default/adservice-77d5cd745d[ReplicaSet] is not selected by any Egress rule
		Ingress (Denied)
			NetworkPolicy default/adservice-netpol selects default/adservice-77d5cd745d[ReplicaSet], but default/checkoutservice-69c8ff664b[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/checkoutservice-69c8ff664b[ReplicaSet] => default/cartservice-74f56fd4b[ReplicaSet]:

Allowed connections:
	Allowed TCP:[7070] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy default/checkoutservice-netpol allows connection by Egress rule #1
		Ingress (Allowed)
			NetworkPolicy default/cartservice-netpol allows connection by Ingress rule #1

Denied connections:
	Denied TCP:[1-7069,7071-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/checkoutservice-netpol selects default/checkoutservice-69c8ff664b[ReplicaSet], and Egress rule #1 selects default/cartservice-74f56fd4b[ReplicaSet], but the protocols and ports do not match
		Ingress (Denied)
			NetworkPolicy default/cartservice-netpol selects default/cartservice-74f56fd4b[ReplicaSet], and Ingress rule #1 selects default/checkoutservice-69c8ff664b[ReplicaSet], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/checkoutservice-69c8ff664b[ReplicaSet] => default/currencyservice-77654bbbdd[ReplicaSet]:

Allowed connections:
	Allowed TCP:[7000] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy default/checkoutservice-netpol allows connection by Egress rule #2
		Ingress (Allowed)
			NetworkPolicy default/currencyservice-netpol allows connection by Ingress rule #1

Denied connections:
	Denied TCP:[1-6999,7001-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/checkoutservice-netpol selects default/checkoutservice-69c8ff664b[ReplicaSet], and Egress rule #2 selects default/currencyservice-77654bbbdd[ReplicaSet], but the protocols and ports do not match
		Ingress (Denied)
			NetworkPolicy default/currencyservice-netpol selects default/currencyservice-77654bbbdd[ReplicaSet], and Ingress rule #1 selects default/checkoutservice-69c8ff664b[ReplicaSet], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/checkoutservice-69c8ff664b[ReplicaSet] => default/emailservice-54c7c5d9d[ReplicaSet]:

Allowed connections:
	Allowed TCP:[8080] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy default/checkoutservice-netpol allows connection by Egress rule #3
		Ingress (Allowed)
			NetworkPolicy default/emailservice-netpol allows connection by Ingress rule #1

Denied connections:
	Denied TCP:[1-8079,8081-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/checkoutservice-netpol selects default/checkoutservice-69c8ff664b[ReplicaSet], and Egress rule #3 selects default/emailservice-54c7c5d9d[ReplicaSet], but the protocols and ports do not match
		Ingress (Denied)
			NetworkPolicy default/emailservice-netpol selects default/emailservice-54c7c5d9d[ReplicaSet], and Ingress rule #1 selects default/checkoutservice-69c8ff664b[ReplicaSet], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/checkoutservice-69c8ff664b[ReplicaSet] => default/frontend-99684f7f8[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/checkoutservice-netpol selects default/checkoutservice-69c8ff664b[ReplicaSet], but default/frontend-99684f7f8[ReplicaSet] is not selected by any Egress rule
		Ingress (Denied)
			NetworkPolicy default/frontend-netpol selects default/frontend-99684f7f8[ReplicaSet], but default/checkoutservice-69c8ff664b[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/checkoutservice-69c8ff664b[ReplicaSet] => default/loadgenerator-555fbdc87d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/checkoutservice-netpol selects default/checkoutservice-69c8ff664b[ReplicaSet], but default/loadgenerator-555fbdc87d[ReplicaSet] is not selected by any Egress rule
		Ingress (Denied)
			NetworkPolicy default/loadgenerator-netpol selects default/loadgenerator-555fbdc87d[ReplicaSet], but default/checkoutservice-69c8ff664b[ReplicaSet] is not selected by any Ingress rule (no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/checkoutservice-69c8ff664b[ReplicaSet] => default/paymentservice-bbcbdc6b6[ReplicaSet]:

Allowed connections:
	Allowed TCP:[50051] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy default/checkoutservice-netpol allows connection by Egress rule #4
		Ingress (Allowed)
			NetworkPolicy default/paymentservice-netpol allows connection by Ingress rule #1

Denied connections:
	Denied TCP:[1-50050,50052-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/checkoutservice-netpol selects default/checkoutservice-69c8ff664b[ReplicaSet], and Egress rule #4 selects default/paymentservice-bbcbdc6b6[ReplicaSet], but the protocols and ports do not match
		Ingress (Denied)
			NetworkPolicy default/paymentservice-netpol selects default/paymentservice-bbcbdc6b6[ReplicaSet], and Ingress rule #1 selects default/checkoutservice-69c8ff664b[ReplicaSet], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/checkoutservice-69c8ff664b[ReplicaSet] => default/productcatalogservice-68765d49b6[ReplicaSet]:

Allowed connections:
	Allowed TCP:[3550] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy default/checkoutservice-netpol allows connection by Egress rule #5
		Ingress (Allowed)
			NetworkPolicy default/productcatalogservice-netpol allows connection by Ingress rule #1

Denied connections:
	Denied TCP:[1-3549,3551-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/checkoutservice-netpol selects default/checkoutservice-69c8ff664b[ReplicaSet], and Egress rule #5 selects default/productcatalogservice-68765d49b6[ReplicaSet], but the protocols and ports do not match
		Ingress (Denied)
			NetworkPolicy default/productcatalogservice-netpol selects default/productcatalogservice-68765d49b6[ReplicaSet], and Ingress rule #1 selects default/checkoutservice-69c8ff664b[ReplicaSet], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/checkoutservice-69c8ff664b[ReplicaSet] => default/recommendationservice-5f8c456796[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/checkoutservice-netpol selects default/checkoutservice-69c8ff664b[ReplicaSet], but default/recommendationservice-5f8c456796[ReplicaSet] is not selected by any Egress rule
		Ingress (Denied)
			NetworkPolicy default/recommendationservice-netpol selects default/recommendationservice-5f8c456796[ReplicaSet], but default/checkoutservice-69c8ff664b[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/checkoutservice-69c8ff664b[ReplicaSet] => default/redis-cart-78746d49dc[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/checkoutservice-netpol selects default/checkoutservice-69c8ff664b[ReplicaSet], but default/redis-cart-78746d49dc[ReplicaSet] is not selected by any Egress rule
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/checkoutservice-69c8ff664b[ReplicaSet] => default/shippingservice-5bd985c46d[ReplicaSet]:

Allowed connections:
	Allowed TCP:[50051] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy default/checkoutservice-netpol allows connection by Egress rule #6
		Ingress (Allowed)
			NetworkPolicy default/shippingservice-netpol allows connection by Ingress rule #1

Denied connections:
	Denied TCP:[1-50050,50052-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/checkoutservice-netpol selects default/checkoutservice-69c8ff664b[ReplicaSet], and Egress rule #6 selects default/shippingservice-5bd985c46d[ReplicaSet], but the protocols and ports do not match
		Ingress (Denied)
			NetworkPolicy default/shippingservice-netpol selects default/shippingservice-5bd985c46d[ReplicaSet], and Ingress rule #1 selects default/checkoutservice-69c8ff664b[ReplicaSet], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/currencyservice-77654bbbdd[ReplicaSet] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/currencyservice-netpol selects default/currencyservice-77654bbbdd[ReplicaSet], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule (no rules defined)
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/currencyservice-77654bbbdd[ReplicaSet] => default/adservice-77d5cd745d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/currencyservice-netpol selects default/currencyservice-77654bbbdd[ReplicaSet], but default/adservice-77d5cd745d[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/adservice-netpol selects default/adservice-77d5cd745d[ReplicaSet], but default/currencyservice-77654bbbdd[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/currencyservice-77654bbbdd[ReplicaSet] => default/cartservice-74f56fd4b[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/currencyservice-netpol selects default/currencyservice-77654bbbdd[ReplicaSet], but default/cartservice-74f56fd4b[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/cartservice-netpol selects default/cartservice-74f56fd4b[ReplicaSet], but default/currencyservice-77654bbbdd[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/currencyservice-77654bbbdd[ReplicaSet] => default/checkoutservice-69c8ff664b[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/currencyservice-netpol selects default/currencyservice-77654bbbdd[ReplicaSet], but default/checkoutservice-69c8ff664b[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/checkoutservice-netpol selects default/checkoutservice-69c8ff664b[ReplicaSet], but default/currencyservice-77654bbbdd[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/currencyservice-77654bbbdd[ReplicaSet] => default/emailservice-54c7c5d9d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/currencyservice-netpol selects default/currencyservice-77654bbbdd[ReplicaSet], but default/emailservice-54c7c5d9d[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/emailservice-netpol selects default/emailservice-54c7c5d9d[ReplicaSet], but default/currencyservice-77654bbbdd[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/currencyservice-77654bbbdd[ReplicaSet] => default/frontend-99684f7f8[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/currencyservice-netpol selects default/currencyservice-77654bbbdd[ReplicaSet], but default/frontend-99684f7f8[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/frontend-netpol selects default/frontend-99684f7f8[ReplicaSet], but default/currencyservice-77654bbbdd[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/currencyservice-77654bbbdd[ReplicaSet] => default/loadgenerator-555fbdc87d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/currencyservice-netpol selects default/currencyservice-77654bbbdd[ReplicaSet], but default/loadgenerator-555fbdc87d[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/loadgenerator-netpol selects default/loadgenerator-555fbdc87d[ReplicaSet], but default/currencyservice-77654bbbdd[ReplicaSet] is not selected by any Ingress rule (no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/currencyservice-77654bbbdd[ReplicaSet] => default/paymentservice-bbcbdc6b6[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/currencyservice-netpol selects default/currencyservice-77654bbbdd[ReplicaSet], but default/paymentservice-bbcbdc6b6[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/paymentservice-netpol selects default/paymentservice-bbcbdc6b6[ReplicaSet], but default/currencyservice-77654bbbdd[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/currencyservice-77654bbbdd[ReplicaSet] => default/productcatalogservice-68765d49b6[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/currencyservice-netpol selects default/currencyservice-77654bbbdd[ReplicaSet], but default/productcatalogservice-68765d49b6[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/productcatalogservice-netpol selects default/productcatalogservice-68765d49b6[ReplicaSet], but default/currencyservice-77654bbbdd[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/currencyservice-77654bbbdd[ReplicaSet] => default/recommendationservice-5f8c456796[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/currencyservice-netpol selects default/currencyservice-77654bbbdd[ReplicaSet], but default/recommendationservice-5f8c456796[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/recommendationservice-netpol selects default/recommendationservice-5f8c456796[ReplicaSet], but default/currencyservice-77654bbbdd[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/currencyservice-77654bbbdd[ReplicaSet] => default/redis-cart-78746d49dc[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/currencyservice-netpol selects default/currencyservice-77654bbbdd[ReplicaSet], but default/redis-cart-78746d49dc[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/currencyservice-77654bbbdd[ReplicaSet] => default/shippingservice-5bd985c46d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/currencyservice-netpol selects default/currencyservice-77654bbbdd[ReplicaSet], but default/shippingservice-5bd985c46d[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/shippingservice-netpol selects default/shippingservice-5bd985c46d[ReplicaSet], but default/currencyservice-77654bbbdd[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/emailservice-54c7c5d9d[ReplicaSet] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/emailservice-netpol selects default/emailservice-54c7c5d9d[ReplicaSet], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule (no rules defined)
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/emailservice-54c7c5d9d[ReplicaSet] => default/adservice-77d5cd745d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/emailservice-netpol selects default/emailservice-54c7c5d9d[ReplicaSet], but default/adservice-77d5cd745d[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/adservice-netpol selects default/adservice-77d5cd745d[ReplicaSet], but default/emailservice-54c7c5d9d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/emailservice-54c7c5d9d[ReplicaSet] => default/cartservice-74f56fd4b[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/emailservice-netpol selects default/emailservice-54c7c5d9d[ReplicaSet], but default/cartservice-74f56fd4b[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/cartservice-netpol selects default/cartservice-74f56fd4b[ReplicaSet], but default/emailservice-54c7c5d9d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/emailservice-54c7c5d9d[ReplicaSet] => default/checkoutservice-69c8ff664b[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/emailservice-netpol selects default/emailservice-54c7c5d9d[ReplicaSet], but default/checkoutservice-69c8ff664b[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/checkoutservice-netpol selects default/checkoutservice-69c8ff664b[ReplicaSet], but default/emailservice-54c7c5d9d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/emailservice-54c7c5d9d[ReplicaSet] => default/currencyservice-77654bbbdd[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/emailservice-netpol selects default/emailservice-54c7c5d9d[ReplicaSet], but default/currencyservice-77654bbbdd[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/currencyservice-netpol selects default/currencyservice-77654bbbdd[ReplicaSet], but default/emailservice-54c7c5d9d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/emailservice-54c7c5d9d[ReplicaSet] => default/frontend-99684f7f8[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/emailservice-netpol selects default/emailservice-54c7c5d9d[ReplicaSet], but default/frontend-99684f7f8[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/frontend-netpol selects default/frontend-99684f7f8[ReplicaSet], but default/emailservice-54c7c5d9d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/emailservice-54c7c5d9d[ReplicaSet] => default/loadgenerator-555fbdc87d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/emailservice-netpol selects default/emailservice-54c7c5d9d[ReplicaSet], but default/loadgenerator-555fbdc87d[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/loadgenerator-netpol selects default/loadgenerator-555fbdc87d[ReplicaSet], but default/emailservice-54c7c5d9d[ReplicaSet] is not selected by any Ingress rule (no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/emailservice-54c7c5d9d[ReplicaSet] => default/paymentservice-bbcbdc6b6[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/emailservice-netpol selects default/emailservice-54c7c5d9d[ReplicaSet], but default/paymentservice-bbcbdc6b6[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/paymentservice-netpol selects default/paymentservice-bbcbdc6b6[ReplicaSet], but default/emailservice-54c7c5d9d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/emailservice-54c7c5d9d[ReplicaSet] => default/productcatalogservice-68765d49b6[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/emailservice-netpol selects default/emailservice-54c7c5d9d[ReplicaSet], but default/productcatalogservice-68765d49b6[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/productcatalogservice-netpol selects default/productcatalogservice-68765d49b6[ReplicaSet], but default/emailservice-54c7c5d9d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/emailservice-54c7c5d9d[ReplicaSet] => default/recommendationservice-5f8c456796[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/emailservice-netpol selects default/emailservice-54c7c5d9d[ReplicaSet], but default/recommendationservice-5f8c456796[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/recommendationservice-netpol selects default/recommendationservice-5f8c456796[ReplicaSet], but default/emailservice-54c7c5d9d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/emailservice-54c7c5d9d[ReplicaSet] => default/redis-cart-78746d49dc[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/emailservice-netpol selects default/emailservice-54c7c5d9d[ReplicaSet], but default/redis-cart-78746d49dc[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/emailservice-54c7c5d9d[ReplicaSet] => default/shippingservice-5bd985c46d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/emailservice-netpol selects default/emailservice-54c7c5d9d[ReplicaSet], but default/shippingservice-5bd985c46d[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/shippingservice-netpol selects default/shippingservice-5bd985c46d[ReplicaSet], but default/emailservice-54c7c5d9d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/frontend-99684f7f8[ReplicaSet] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/frontend-netpol selects default/frontend-99684f7f8[ReplicaSet], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/frontend-99684f7f8[ReplicaSet] => default/adservice-77d5cd745d[ReplicaSet]:

Allowed connections:
	Allowed TCP:[9555] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy default/frontend-netpol allows connection by Egress rule #1
		Ingress (Allowed)
			NetworkPolicy default/adservice-netpol allows connection by Ingress rule #1

Denied connections:
	Denied TCP:[1-9554,9556-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/frontend-netpol selects default/frontend-99684f7f8[ReplicaSet], and Egress rule #1 selects default/adservice-77d5cd745d[ReplicaSet], but the protocols and ports do not match
		Ingress (Denied)
			NetworkPolicy default/adservice-netpol selects default/adservice-77d5cd745d[ReplicaSet], and Ingress rule #1 selects default/frontend-99684f7f8[ReplicaSet], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/frontend-99684f7f8[ReplicaSet] => default/cartservice-74f56fd4b[ReplicaSet]:

Allowed connections:
	Allowed TCP:[7070] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy default/frontend-netpol allows connection by Egress rule #2
		Ingress (Allowed)
			NetworkPolicy default/cartservice-netpol allows connection by Ingress rule #2

Denied connections:
	Denied TCP:[1-7069,7071-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/frontend-netpol selects default/frontend-99684f7f8[ReplicaSet], and Egress rule #2 selects default/cartservice-74f56fd4b[ReplicaSet], but the protocols and ports do not match
		Ingress (Denied)
			NetworkPolicy default/cartservice-netpol selects default/cartservice-74f56fd4b[ReplicaSet], and Ingress rule #2 selects default/frontend-99684f7f8[ReplicaSet], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/frontend-99684f7f8[ReplicaSet] => default/checkoutservice-69c8ff664b[ReplicaSet]:

Allowed connections:
	Allowed TCP:[5050] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy default/frontend-netpol allows connection by Egress rule #3
		Ingress (Allowed)
			NetworkPolicy default/checkoutservice-netpol allows connection by Ingress rule #1

Denied connections:
	Denied TCP:[1-5049,5051-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/frontend-netpol selects default/frontend-99684f7f8[ReplicaSet], and Egress rule #3 selects default/checkoutservice-69c8ff664b[ReplicaSet], but the protocols and ports do not match
		Ingress (Denied)
			NetworkPolicy default/checkoutservice-netpol selects default/checkoutservice-69c8ff664b[ReplicaSet], and Ingress rule #1 selects default/frontend-99684f7f8[ReplicaSet], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/frontend-99684f7f8[ReplicaSet] => default/currencyservice-77654bbbdd[ReplicaSet]:

Allowed connections:
	Allowed TCP:[7000] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy default/frontend-netpol allows connection by Egress rule #4
		Ingress (Allowed)
			NetworkPolicy default/currencyservice-netpol allows connection by Ingress rule #2

Denied connections:
	Denied TCP:[1-6999,7001-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/frontend-netpol selects default/frontend-99684f7f8[ReplicaSet], and Egress rule #4 selects default/currencyservice-77654bbbdd[ReplicaSet], but the protocols and ports do not match
		Ingress (Denied)
			NetworkPolicy default/currencyservice-netpol selects default/currencyservice-77654bbbdd[ReplicaSet], and Ingress rule #2 selects default/frontend-99684f7f8[ReplicaSet], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/frontend-99684f7f8[ReplicaSet] => default/emailservice-54c7c5d9d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/frontend-netpol selects default/frontend-99684f7f8[ReplicaSet], but default/emailservice-54c7c5d9d[ReplicaSet] is not selected by any Egress rule
		Ingress (Denied)
			NetworkPolicy default/emailservice-netpol selects default/emailservice-54c7c5d9d[ReplicaSet], but default/frontend-99684f7f8[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/frontend-99684f7f8[ReplicaSet] => default/loadgenerator-555fbdc87d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/frontend-netpol selects default/frontend-99684f7f8[ReplicaSet], but default/loadgenerator-555fbdc87d[ReplicaSet] is not selected by any Egress rule
		Ingress (Denied)
			NetworkPolicy default/loadgenerator-netpol selects default/loadgenerator-555fbdc87d[ReplicaSet], but default/frontend-99684f7f8[ReplicaSet] is not selected by any Ingress rule (no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/frontend-99684f7f8[ReplicaSet] => default/paymentservice-bbcbdc6b6[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/frontend-netpol selects default/frontend-99684f7f8[ReplicaSet], but default/paymentservice-bbcbdc6b6[ReplicaSet] is not selected by any Egress rule
		Ingress (Denied)
			NetworkPolicy default/paymentservice-netpol selects default/paymentservice-bbcbdc6b6[ReplicaSet], but default/frontend-99684f7f8[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/frontend-99684f7f8[ReplicaSet] => default/productcatalogservice-68765d49b6[ReplicaSet]:

Allowed connections:
	Allowed TCP:[3550] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy default/frontend-netpol allows connection by Egress rule #5
		Ingress (Allowed)
			NetworkPolicy default/productcatalogservice-netpol allows connection by Ingress rule #2

Denied connections:
	Denied TCP:[1-3549,3551-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/frontend-netpol selects default/frontend-99684f7f8[ReplicaSet], and Egress rule #5 selects default/productcatalogservice-68765d49b6[ReplicaSet], but the protocols and ports do not match
		Ingress (Denied)
			NetworkPolicy default/productcatalogservice-netpol selects default/productcatalogservice-68765d49b6[ReplicaSet], and Ingress rule #2 selects default/frontend-99684f7f8[ReplicaSet], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/frontend-99684f7f8[ReplicaSet] => default/recommendationservice-5f8c456796[ReplicaSet]:

Allowed connections:
	Allowed TCP:[8080] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy default/frontend-netpol allows connection by Egress rule #6
		Ingress (Allowed)
			NetworkPolicy default/recommendationservice-netpol allows connection by Ingress rule #1

Denied connections:
	Denied TCP:[1-8079,8081-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/frontend-netpol selects default/frontend-99684f7f8[ReplicaSet], and Egress rule #6 selects default/recommendationservice-5f8c456796[ReplicaSet], but the protocols and ports do not match
		Ingress (Denied)
			NetworkPolicy default/recommendationservice-netpol selects default/recommendationservice-5f8c456796[ReplicaSet], and Ingress rule #1 selects default/frontend-99684f7f8[ReplicaSet], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/frontend-99684f7f8[ReplicaSet] => default/redis-cart-78746d49dc[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/frontend-netpol selects default/frontend-99684f7f8[ReplicaSet], but default/redis-cart-78746d49dc[ReplicaSet] is not selected by any Egress rule
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/frontend-99684f7f8[ReplicaSet] => default/shippingservice-5bd985c46d[ReplicaSet]:

Allowed connections:
	Allowed TCP:[50051] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy default/frontend-netpol allows connection by Egress rule #7
		Ingress (Allowed)
			NetworkPolicy default/shippingservice-netpol allows connection by Ingress rule #2

Denied connections:
	Denied TCP:[1-50050,50052-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/frontend-netpol selects default/frontend-99684f7f8[ReplicaSet], and Egress rule #7 selects default/shippingservice-5bd985c46d[ReplicaSet], but the protocols and ports do not match
		Ingress (Denied)
			NetworkPolicy default/shippingservice-netpol selects default/shippingservice-5bd985c46d[ReplicaSet], and Ingress rule #2 selects default/frontend-99684f7f8[ReplicaSet], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/loadgenerator-555fbdc87d[ReplicaSet] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/loadgenerator-netpol selects default/loadgenerator-555fbdc87d[ReplicaSet], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/loadgenerator-555fbdc87d[ReplicaSet] => default/adservice-77d5cd745d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/loadgenerator-netpol selects default/loadgenerator-555fbdc87d[ReplicaSet], but default/adservice-77d5cd745d[ReplicaSet] is not selected by any Egress rule
		Ingress (Denied)
			NetworkPolicy default/adservice-netpol selects default/adservice-77d5cd745d[ReplicaSet], but default/loadgenerator-555fbdc87d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/loadgenerator-555fbdc87d[ReplicaSet] => default/cartservice-74f56fd4b[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/loadgenerator-netpol selects default/loadgenerator-555fbdc87d[ReplicaSet], but default/cartservice-74f56fd4b[ReplicaSet] is not selected by any Egress rule
		Ingress (Denied)
			NetworkPolicy default/cartservice-netpol selects default/cartservice-74f56fd4b[ReplicaSet], but default/loadgenerator-555fbdc87d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/loadgenerator-555fbdc87d[ReplicaSet] => default/checkoutservice-69c8ff664b[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/loadgenerator-netpol selects default/loadgenerator-555fbdc87d[ReplicaSet], but default/checkoutservice-69c8ff664b[ReplicaSet] is not selected by any Egress rule
		Ingress (Denied)
			NetworkPolicy default/checkoutservice-netpol selects default/checkoutservice-69c8ff664b[ReplicaSet], but default/loadgenerator-555fbdc87d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/loadgenerator-555fbdc87d[ReplicaSet] => default/currencyservice-77654bbbdd[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/loadgenerator-netpol selects default/loadgenerator-555fbdc87d[ReplicaSet], but default/currencyservice-77654bbbdd[ReplicaSet] is not selected by any Egress rule
		Ingress (Denied)
			NetworkPolicy default/currencyservice-netpol selects default/currencyservice-77654bbbdd[ReplicaSet], but default/loadgenerator-555fbdc87d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/loadgenerator-555fbdc87d[ReplicaSet] => default/emailservice-54c7c5d9d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/loadgenerator-netpol selects default/loadgenerator-555fbdc87d[ReplicaSet], but default/emailservice-54c7c5d9d[ReplicaSet] is not selected by any Egress rule
		Ingress (Denied)
			NetworkPolicy default/emailservice-netpol selects default/emailservice-54c7c5d9d[ReplicaSet], but default/loadgenerator-555fbdc87d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/loadgenerator-555fbdc87d[ReplicaSet] => default/frontend-99684f7f8[ReplicaSet]:

Allowed connections:
	Allowed TCP:[8080] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy default/loadgenerator-netpol allows connection by Egress rule #1
		Ingress (Allowed)
			NetworkPolicy default/frontend-netpol allows connection by Ingress rule #1

Denied connections:
	Denied TCP:[1-8079,8081-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/loadgenerator-netpol selects default/loadgenerator-555fbdc87d[ReplicaSet], and Egress rule #1 selects default/frontend-99684f7f8[ReplicaSet], but the protocols and ports do not match
		Ingress (Denied)
			NetworkPolicy default/frontend-netpol selects default/frontend-99684f7f8[ReplicaSet], and Ingress rule #1 selects default/loadgenerator-555fbdc87d[ReplicaSet], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/loadgenerator-555fbdc87d[ReplicaSet] => default/paymentservice-bbcbdc6b6[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/loadgenerator-netpol selects default/loadgenerator-555fbdc87d[ReplicaSet], but default/paymentservice-bbcbdc6b6[ReplicaSet] is not selected by any Egress rule
		Ingress (Denied)
			NetworkPolicy default/paymentservice-netpol selects default/paymentservice-bbcbdc6b6[ReplicaSet], but default/loadgenerator-555fbdc87d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/loadgenerator-555fbdc87d[ReplicaSet] => default/productcatalogservice-68765d49b6[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/loadgenerator-netpol selects default/loadgenerator-555fbdc87d[ReplicaSet], but default/productcatalogservice-68765d49b6[ReplicaSet] is not selected by any Egress rule
		Ingress (Denied)
			NetworkPolicy default/productcatalogservice-netpol selects default/productcatalogservice-68765d49b6[ReplicaSet], but default/loadgenerator-555fbdc87d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/loadgenerator-555fbdc87d[ReplicaSet] => default/recommendationservice-5f8c456796[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/loadgenerator-netpol selects default/loadgenerator-555fbdc87d[ReplicaSet], but default/recommendationservice-5f8c456796[ReplicaSet] is not selected by any Egress rule
		Ingress (Denied)
			NetworkPolicy default/recommendationservice-netpol selects default/recommendationservice-5f8c456796[ReplicaSet], but default/loadgenerator-555fbdc87d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/loadgenerator-555fbdc87d[ReplicaSet] => default/redis-cart-78746d49dc[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/loadgenerator-netpol selects default/loadgenerator-555fbdc87d[ReplicaSet], but default/redis-cart-78746d49dc[ReplicaSet] is not selected by any Egress rule
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/loadgenerator-555fbdc87d[ReplicaSet] => default/shippingservice-5bd985c46d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/loadgenerator-netpol selects default/loadgenerator-555fbdc87d[ReplicaSet], but default/shippingservice-5bd985c46d[ReplicaSet] is not selected by any Egress rule
		Ingress (Denied)
			NetworkPolicy default/shippingservice-netpol selects default/shippingservice-5bd985c46d[ReplicaSet], but default/loadgenerator-555fbdc87d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/paymentservice-bbcbdc6b6[ReplicaSet] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/paymentservice-netpol selects default/paymentservice-bbcbdc6b6[ReplicaSet], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule (no rules defined)
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/paymentservice-bbcbdc6b6[ReplicaSet] => default/adservice-77d5cd745d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/paymentservice-netpol selects default/paymentservice-bbcbdc6b6[ReplicaSet], but default/adservice-77d5cd745d[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/adservice-netpol selects default/adservice-77d5cd745d[ReplicaSet], but default/paymentservice-bbcbdc6b6[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/paymentservice-bbcbdc6b6[ReplicaSet] => default/cartservice-74f56fd4b[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/paymentservice-netpol selects default/paymentservice-bbcbdc6b6[ReplicaSet], but default/cartservice-74f56fd4b[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/cartservice-netpol selects default/cartservice-74f56fd4b[ReplicaSet], but default/paymentservice-bbcbdc6b6[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/paymentservice-bbcbdc6b6[ReplicaSet] => default/checkoutservice-69c8ff664b[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/paymentservice-netpol selects default/paymentservice-bbcbdc6b6[ReplicaSet], but default/checkoutservice-69c8ff664b[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/checkoutservice-netpol selects default/checkoutservice-69c8ff664b[ReplicaSet], but default/paymentservice-bbcbdc6b6[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/paymentservice-bbcbdc6b6[ReplicaSet] => default/currencyservice-77654bbbdd[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/paymentservice-netpol selects default/paymentservice-bbcbdc6b6[ReplicaSet], but default/currencyservice-77654bbbdd[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/currencyservice-netpol selects default/currencyservice-77654bbbdd[ReplicaSet], but default/paymentservice-bbcbdc6b6[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/paymentservice-bbcbdc6b6[ReplicaSet] => default/emailservice-54c7c5d9d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/paymentservice-netpol selects default/paymentservice-bbcbdc6b6[ReplicaSet], but default/emailservice-54c7c5d9d[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/emailservice-netpol selects default/emailservice-54c7c5d9d[ReplicaSet], but default/paymentservice-bbcbdc6b6[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/paymentservice-bbcbdc6b6[ReplicaSet] => default/frontend-99684f7f8[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/paymentservice-netpol selects default/paymentservice-bbcbdc6b6[ReplicaSet], but default/frontend-99684f7f8[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/frontend-netpol selects default/frontend-99684f7f8[ReplicaSet], but default/paymentservice-bbcbdc6b6[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/paymentservice-bbcbdc6b6[ReplicaSet] => default/loadgenerator-555fbdc87d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/paymentservice-netpol selects default/paymentservice-bbcbdc6b6[ReplicaSet], but default/loadgenerator-555fbdc87d[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/loadgenerator-netpol selects default/loadgenerator-555fbdc87d[ReplicaSet], but default/paymentservice-bbcbdc6b6[ReplicaSet] is not selected by any Ingress rule (no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/paymentservice-bbcbdc6b6[ReplicaSet] => default/productcatalogservice-68765d49b6[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/paymentservice-netpol selects default/paymentservice-bbcbdc6b6[ReplicaSet], but default/productcatalogservice-68765d49b6[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/productcatalogservice-netpol selects default/productcatalogservice-68765d49b6[ReplicaSet], but default/paymentservice-bbcbdc6b6[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/paymentservice-bbcbdc6b6[ReplicaSet] => default/recommendationservice-5f8c456796[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/paymentservice-netpol selects default/paymentservice-bbcbdc6b6[ReplicaSet], but default/recommendationservice-5f8c456796[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/recommendationservice-netpol selects default/recommendationservice-5f8c456796[ReplicaSet], but default/paymentservice-bbcbdc6b6[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/paymentservice-bbcbdc6b6[ReplicaSet] => default/redis-cart-78746d49dc[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/paymentservice-netpol selects default/paymentservice-bbcbdc6b6[ReplicaSet], but default/redis-cart-78746d49dc[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/paymentservice-bbcbdc6b6[ReplicaSet] => default/shippingservice-5bd985c46d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/paymentservice-netpol selects default/paymentservice-bbcbdc6b6[ReplicaSet], but default/shippingservice-5bd985c46d[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/shippingservice-netpol selects default/shippingservice-5bd985c46d[ReplicaSet], but default/paymentservice-bbcbdc6b6[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/productcatalogservice-68765d49b6[ReplicaSet] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/productcatalogservice-netpol selects default/productcatalogservice-68765d49b6[ReplicaSet], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule (no rules defined)
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/productcatalogservice-68765d49b6[ReplicaSet] => default/adservice-77d5cd745d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/productcatalogservice-netpol selects default/productcatalogservice-68765d49b6[ReplicaSet], but default/adservice-77d5cd745d[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/adservice-netpol selects default/adservice-77d5cd745d[ReplicaSet], but default/productcatalogservice-68765d49b6[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/productcatalogservice-68765d49b6[ReplicaSet] => default/cartservice-74f56fd4b[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/productcatalogservice-netpol selects default/productcatalogservice-68765d49b6[ReplicaSet], but default/cartservice-74f56fd4b[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/cartservice-netpol selects default/cartservice-74f56fd4b[ReplicaSet], but default/productcatalogservice-68765d49b6[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/productcatalogservice-68765d49b6[ReplicaSet] => default/checkoutservice-69c8ff664b[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/productcatalogservice-netpol selects default/productcatalogservice-68765d49b6[ReplicaSet], but default/checkoutservice-69c8ff664b[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/checkoutservice-netpol selects default/checkoutservice-69c8ff664b[ReplicaSet], but default/productcatalogservice-68765d49b6[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/productcatalogservice-68765d49b6[ReplicaSet] => default/currencyservice-77654bbbdd[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/productcatalogservice-netpol selects default/productcatalogservice-68765d49b6[ReplicaSet], but default/currencyservice-77654bbbdd[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/currencyservice-netpol selects default/currencyservice-77654bbbdd[ReplicaSet], but default/productcatalogservice-68765d49b6[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/productcatalogservice-68765d49b6[ReplicaSet] => default/emailservice-54c7c5d9d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/productcatalogservice-netpol selects default/productcatalogservice-68765d49b6[ReplicaSet], but default/emailservice-54c7c5d9d[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/emailservice-netpol selects default/emailservice-54c7c5d9d[ReplicaSet], but default/productcatalogservice-68765d49b6[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/productcatalogservice-68765d49b6[ReplicaSet] => default/frontend-99684f7f8[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/productcatalogservice-netpol selects default/productcatalogservice-68765d49b6[ReplicaSet], but default/frontend-99684f7f8[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/frontend-netpol selects default/frontend-99684f7f8[ReplicaSet], but default/productcatalogservice-68765d49b6[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/productcatalogservice-68765d49b6[ReplicaSet] => default/loadgenerator-555fbdc87d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/productcatalogservice-netpol selects default/productcatalogservice-68765d49b6[ReplicaSet], but default/loadgenerator-555fbdc87d[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/loadgenerator-netpol selects default/loadgenerator-555fbdc87d[ReplicaSet], but default/productcatalogservice-68765d49b6[ReplicaSet] is not selected by any Ingress rule (no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/productcatalogservice-68765d49b6[ReplicaSet] => default/paymentservice-bbcbdc6b6[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/productcatalogservice-netpol selects default/productcatalogservice-68765d49b6[ReplicaSet], but default/paymentservice-bbcbdc6b6[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/paymentservice-netpol selects default/paymentservice-bbcbdc6b6[ReplicaSet], but default/productcatalogservice-68765d49b6[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/productcatalogservice-68765d49b6[ReplicaSet] => default/recommendationservice-5f8c456796[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/productcatalogservice-netpol selects default/productcatalogservice-68765d49b6[ReplicaSet], but default/recommendationservice-5f8c456796[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/recommendationservice-netpol selects default/recommendationservice-5f8c456796[ReplicaSet], but default/productcatalogservice-68765d49b6[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/productcatalogservice-68765d49b6[ReplicaSet] => default/redis-cart-78746d49dc[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/productcatalogservice-netpol selects default/productcatalogservice-68765d49b6[ReplicaSet], but default/redis-cart-78746d49dc[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/productcatalogservice-68765d49b6[ReplicaSet] => default/shippingservice-5bd985c46d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/productcatalogservice-netpol selects default/productcatalogservice-68765d49b6[ReplicaSet], but default/shippingservice-5bd985c46d[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/shippingservice-netpol selects default/shippingservice-5bd985c46d[ReplicaSet], but default/productcatalogservice-68765d49b6[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/recommendationservice-5f8c456796[ReplicaSet] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/recommendationservice-netpol selects default/recommendationservice-5f8c456796[ReplicaSet], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/recommendationservice-5f8c456796[ReplicaSet] => default/adservice-77d5cd745d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/recommendationservice-netpol selects default/recommendationservice-5f8c456796[ReplicaSet], but default/adservice-77d5cd745d[ReplicaSet] is not selected by any Egress rule
		Ingress (Denied)
			NetworkPolicy default/adservice-netpol selects default/adservice-77d5cd745d[ReplicaSet], but default/recommendationservice-5f8c456796[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/recommendationservice-5f8c456796[ReplicaSet] => default/cartservice-74f56fd4b[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/recommendationservice-netpol selects default/recommendationservice-5f8c456796[ReplicaSet], but default/cartservice-74f56fd4b[ReplicaSet] is not selected by any Egress rule
		Ingress (Denied)
			NetworkPolicy default/cartservice-netpol selects default/cartservice-74f56fd4b[ReplicaSet], but default/recommendationservice-5f8c456796[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/recommendationservice-5f8c456796[ReplicaSet] => default/checkoutservice-69c8ff664b[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/recommendationservice-netpol selects default/recommendationservice-5f8c456796[ReplicaSet], but default/checkoutservice-69c8ff664b[ReplicaSet] is not selected by any Egress rule
		Ingress (Denied)
			NetworkPolicy default/checkoutservice-netpol selects default/checkoutservice-69c8ff664b[ReplicaSet], but default/recommendationservice-5f8c456796[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/recommendationservice-5f8c456796[ReplicaSet] => default/currencyservice-77654bbbdd[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/recommendationservice-netpol selects default/recommendationservice-5f8c456796[ReplicaSet], but default/currencyservice-77654bbbdd[ReplicaSet] is not selected by any Egress rule
		Ingress (Denied)
			NetworkPolicy default/currencyservice-netpol selects default/currencyservice-77654bbbdd[ReplicaSet], but default/recommendationservice-5f8c456796[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/recommendationservice-5f8c456796[ReplicaSet] => default/emailservice-54c7c5d9d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/recommendationservice-netpol selects default/recommendationservice-5f8c456796[ReplicaSet], but default/emailservice-54c7c5d9d[ReplicaSet] is not selected by any Egress rule
		Ingress (Denied)
			NetworkPolicy default/emailservice-netpol selects default/emailservice-54c7c5d9d[ReplicaSet], but default/recommendationservice-5f8c456796[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/recommendationservice-5f8c456796[ReplicaSet] => default/frontend-99684f7f8[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/recommendationservice-netpol selects default/recommendationservice-5f8c456796[ReplicaSet], but default/frontend-99684f7f8[ReplicaSet] is not selected by any Egress rule
		Ingress (Denied)
			NetworkPolicy default/frontend-netpol selects default/frontend-99684f7f8[ReplicaSet], but default/recommendationservice-5f8c456796[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/recommendationservice-5f8c456796[ReplicaSet] => default/loadgenerator-555fbdc87d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/recommendationservice-netpol selects default/recommendationservice-5f8c456796[ReplicaSet], but default/loadgenerator-555fbdc87d[ReplicaSet] is not selected by any Egress rule
		Ingress (Denied)
			NetworkPolicy default/loadgenerator-netpol selects default/loadgenerator-555fbdc87d[ReplicaSet], but default/recommendationservice-5f8c456796[ReplicaSet] is not selected by any Ingress rule (no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/recommendationservice-5f8c456796[ReplicaSet] => default/paymentservice-bbcbdc6b6[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/recommendationservice-netpol selects default/recommendationservice-5f8c456796[ReplicaSet], but default/paymentservice-bbcbdc6b6[ReplicaSet] is not selected by any Egress rule
		Ingress (Denied)
			NetworkPolicy default/paymentservice-netpol selects default/paymentservice-bbcbdc6b6[ReplicaSet], but default/recommendationservice-5f8c456796[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/recommendationservice-5f8c456796[ReplicaSet] => default/productcatalogservice-68765d49b6[ReplicaSet]:

Allowed connections:
	Allowed TCP:[3550] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy default/recommendationservice-netpol allows connection by Egress rule #1
		Ingress (Allowed)
			NetworkPolicy default/productcatalogservice-netpol allows connection by Ingress rule #3

Denied connections:
	Denied TCP:[1-3549,3551-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/recommendationservice-netpol selects default/recommendationservice-5f8c456796[ReplicaSet], and Egress rule #1 selects default/productcatalogservice-68765d49b6[ReplicaSet], but the protocols and ports do not match
		Ingress (Denied)
			NetworkPolicy default/productcatalogservice-netpol selects default/productcatalogservice-68765d49b6[ReplicaSet], and Ingress rule #3 selects default/recommendationservice-5f8c456796[ReplicaSet], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/recommendationservice-5f8c456796[ReplicaSet] => default/redis-cart-78746d49dc[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/recommendationservice-netpol selects default/recommendationservice-5f8c456796[ReplicaSet], but default/redis-cart-78746d49dc[ReplicaSet] is not selected by any Egress rule
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/recommendationservice-5f8c456796[ReplicaSet] => default/shippingservice-5bd985c46d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/recommendationservice-netpol selects default/recommendationservice-5f8c456796[ReplicaSet], but default/shippingservice-5bd985c46d[ReplicaSet] is not selected by any Egress rule
		Ingress (Denied)
			NetworkPolicy default/shippingservice-netpol selects default/shippingservice-5bd985c46d[ReplicaSet], but default/recommendationservice-5f8c456796[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/redis-cart-78746d49dc[ReplicaSet] => default/adservice-77d5cd745d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy default/adservice-netpol selects default/adservice-77d5cd745d[ReplicaSet], but default/redis-cart-78746d49dc[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/redis-cart-78746d49dc[ReplicaSet] => default/cartservice-74f56fd4b[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy default/cartservice-netpol selects default/cartservice-74f56fd4b[ReplicaSet], but default/redis-cart-78746d49dc[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/redis-cart-78746d49dc[ReplicaSet] => default/checkoutservice-69c8ff664b[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy default/checkoutservice-netpol selects default/checkoutservice-69c8ff664b[ReplicaSet], but default/redis-cart-78746d49dc[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/redis-cart-78746d49dc[ReplicaSet] => default/currencyservice-77654bbbdd[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy default/currencyservice-netpol selects default/currencyservice-77654bbbdd[ReplicaSet], but default/redis-cart-78746d49dc[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/redis-cart-78746d49dc[ReplicaSet] => default/emailservice-54c7c5d9d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy default/emailservice-netpol selects default/emailservice-54c7c5d9d[ReplicaSet], but default/redis-cart-78746d49dc[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/redis-cart-78746d49dc[ReplicaSet] => default/frontend-99684f7f8[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy default/frontend-netpol selects default/frontend-99684f7f8[ReplicaSet], but default/redis-cart-78746d49dc[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/redis-cart-78746d49dc[ReplicaSet] => default/loadgenerator-555fbdc87d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy default/loadgenerator-netpol selects default/loadgenerator-555fbdc87d[ReplicaSet], but default/redis-cart-78746d49dc[ReplicaSet] is not selected by any Ingress rule (no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/redis-cart-78746d49dc[ReplicaSet] => default/paymentservice-bbcbdc6b6[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy default/paymentservice-netpol selects default/paymentservice-bbcbdc6b6[ReplicaSet], but default/redis-cart-78746d49dc[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/redis-cart-78746d49dc[ReplicaSet] => default/productcatalogservice-68765d49b6[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy default/productcatalogservice-netpol selects default/productcatalogservice-68765d49b6[ReplicaSet], but default/redis-cart-78746d49dc[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/redis-cart-78746d49dc[ReplicaSet] => default/recommendationservice-5f8c456796[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy default/recommendationservice-netpol selects default/recommendationservice-5f8c456796[ReplicaSet], but default/redis-cart-78746d49dc[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/redis-cart-78746d49dc[ReplicaSet] => default/shippingservice-5bd985c46d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy default/shippingservice-netpol selects default/shippingservice-5bd985c46d[ReplicaSet], but default/redis-cart-78746d49dc[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/shippingservice-5bd985c46d[ReplicaSet] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/shippingservice-netpol selects default/shippingservice-5bd985c46d[ReplicaSet], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule (no rules defined)
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/shippingservice-5bd985c46d[ReplicaSet] => default/adservice-77d5cd745d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/shippingservice-netpol selects default/shippingservice-5bd985c46d[ReplicaSet], but default/adservice-77d5cd745d[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/adservice-netpol selects default/adservice-77d5cd745d[ReplicaSet], but default/shippingservice-5bd985c46d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/shippingservice-5bd985c46d[ReplicaSet] => default/cartservice-74f56fd4b[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/shippingservice-netpol selects default/shippingservice-5bd985c46d[ReplicaSet], but default/cartservice-74f56fd4b[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/cartservice-netpol selects default/cartservice-74f56fd4b[ReplicaSet], but default/shippingservice-5bd985c46d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/shippingservice-5bd985c46d[ReplicaSet] => default/checkoutservice-69c8ff664b[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/shippingservice-netpol selects default/shippingservice-5bd985c46d[ReplicaSet], but default/checkoutservice-69c8ff664b[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/checkoutservice-netpol selects default/checkoutservice-69c8ff664b[ReplicaSet], but default/shippingservice-5bd985c46d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/shippingservice-5bd985c46d[ReplicaSet] => default/currencyservice-77654bbbdd[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/shippingservice-netpol selects default/shippingservice-5bd985c46d[ReplicaSet], but default/currencyservice-77654bbbdd[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/currencyservice-netpol selects default/currencyservice-77654bbbdd[ReplicaSet], but default/shippingservice-5bd985c46d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/shippingservice-5bd985c46d[ReplicaSet] => default/emailservice-54c7c5d9d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/shippingservice-netpol selects default/shippingservice-5bd985c46d[ReplicaSet], but default/emailservice-54c7c5d9d[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/emailservice-netpol selects default/emailservice-54c7c5d9d[ReplicaSet], but default/shippingservice-5bd985c46d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/shippingservice-5bd985c46d[ReplicaSet] => default/frontend-99684f7f8[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/shippingservice-netpol selects default/shippingservice-5bd985c46d[ReplicaSet], but default/frontend-99684f7f8[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/frontend-netpol selects default/frontend-99684f7f8[ReplicaSet], but default/shippingservice-5bd985c46d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/shippingservice-5bd985c46d[ReplicaSet] => default/loadgenerator-555fbdc87d[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/shippingservice-netpol selects default/shippingservice-5bd985c46d[ReplicaSet], but default/loadgenerator-555fbdc87d[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/loadgenerator-netpol selects default/loadgenerator-555fbdc87d[ReplicaSet], but default/shippingservice-5bd985c46d[ReplicaSet] is not selected by any Ingress rule (no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/shippingservice-5bd985c46d[ReplicaSet] => default/paymentservice-bbcbdc6b6[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/shippingservice-netpol selects default/shippingservice-5bd985c46d[ReplicaSet], but default/paymentservice-bbcbdc6b6[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/paymentservice-netpol selects default/paymentservice-bbcbdc6b6[ReplicaSet], but default/shippingservice-5bd985c46d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/shippingservice-5bd985c46d[ReplicaSet] => default/productcatalogservice-68765d49b6[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/shippingservice-netpol selects default/shippingservice-5bd985c46d[ReplicaSet], but default/productcatalogservice-68765d49b6[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/productcatalogservice-netpol selects default/productcatalogservice-68765d49b6[ReplicaSet], but default/shippingservice-5bd985c46d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/shippingservice-5bd985c46d[ReplicaSet] => default/recommendationservice-5f8c456796[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/shippingservice-netpol selects default/shippingservice-5bd985c46d[ReplicaSet], but default/recommendationservice-5f8c456796[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Denied)
			NetworkPolicy default/recommendationservice-netpol selects default/recommendationservice-5f8c456796[ReplicaSet], but default/shippingservice-5bd985c46d[ReplicaSet] is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/shippingservice-5bd985c46d[ReplicaSet] => default/redis-cart-78746d49dc[ReplicaSet]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy default/shippingservice-netpol selects default/shippingservice-5bd985c46d[ReplicaSet], but default/redis-cart-78746d49dc[ReplicaSet] is not selected by any Egress rule (no rules defined)
		Ingress (Allowed) due to the system default (Allow all)


#########################################################
# All Connections due to the system default (Allow all) #
#########################################################
0.0.0.0-255.255.255.255 => default/redis-cart-78746d49dc[ReplicaSet]
default/redis-cart-78746d49dc[ReplicaSet] => 0.0.0.0-255.255.255.255
